--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,9 +11,9 @@
 #
 name: release
 on:
-  push:
-    tags:
-      - 'v*'
+  release:
+    types:
+      - created
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
